# project-fittrack-ai

./: .gitignore  .gitleaks.toml  .trivyignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02e9539d46a5_initial_user.py  180d9b9695e5_add_nutrition_logs_table.py  4856ebffcf4b_add_workout_plan_tables.py  7579acaa34a8_add_workout_logs_table.py  a8c3b1d92e47_add_progress_photos_table.py  d15c98288561_add_body_measurements_table.py  f16d4cefefc2_add_ai_recommendations_table.py  f510554d2591_add_password_hash_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai_recommendation.py  measurement.py  nutrition.py  progress_photo.py  user.py  workout.py
backend/app/schemas/: auth.py  measurement.py  nutrition_log.py  progress_photo.py  recommendation.py  user.py  weekly_summary.py  workout.py  workout_log.py
backend/app/services/: ai_provider.py  auth_service.py  measurement_service.py  nutrition_log_service.py  progress_photo_service.py  progress_photo_storage.py  recommendation_service.py  user_service.py  weekly_summary_service.py  workout_log_service.py  workout_service.py
backend/app/tests/: conftest.py  test_auth.py  test_azure_openai_provider.py  test_health.py  test_measurements.py  test_nutrition_logs.py  (+5 more)
backend/scripts/: smoke_progress_photos.sh  smoke_progress_photos_cloud.sh  smoke_weekly_recommendations_cloud.sh
(+349 files in other folders)
