[project]
name = "fittrack-ai-api"
version = "0.1.0"
description = "FitTrack AI backend — FastAPI + async SQLAlchemy + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "greenlet>=3.1",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "pwdlib[argon2]>=0.2",
    "pyjwt>=2.9",
    "openai>=2.44.0",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.30.0",
    "aiohttp>=3.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
